--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
 		"test": "react-scripts test",
 		"eject": "react-scripts eject",
 		"predeploy": "npm run build",
-		"deploy": "gh-pages -d build"
+		"deploy": "gh-pages -d build",
+		"coverage": "react-scripts test --env=jsdom --watchAll=false --coverage"
 	},
 	"eslintConfig": {
 		"extends": [
@@ -53,6 +54,7 @@
 		]
 	},
 	"devDependencies": {
+		"@babel/plugin-proposal-private-property-in-object": "^7.21.11",
 		"gh-pages": "^6.1.1",
 		"sass": "^1.79.3"
 	}
