--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,26 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "type": "aws-sam",
+            "request": "direct-invoke",
+            "name": "auth-server:handler.getAuthURL (nodejs20.x)",
+            "invokeTarget": {
+                "target": "code",
+                "projectRoot": "${workspaceFolder}/auth-server",
+                "lambdaHandler": "handler.getAuthURL",
+                "architecture": "arm64"
+            },
+            "lambda": {
+                "runtime": "nodejs20.x",
+                "payload": {},
+                "environmentVariables": {}
+            },
+            "aws": {
+                "credentials": "profile:freshmozart",
+                "region": "eu-central-1"
+            }
+        },
+        {
             "type": "chrome",
             "request": "launch",
             "name": "Chrome mit \"localhost\" starten",
