--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
 	"devDependencies": {
 		"@babel/plugin-proposal-private-property-in-object": "^7.21.11",
 		"gh-pages": "^6.1.1",
+		"jest-cucumber": "^4.5.0",
 		"sass": "^1.79.3"
 	}
 }
