--- a/package.json
+++ b/package.json
@@ -8,23 +8,12 @@
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^14.5.2",
 		"bootstrap": "^5.3.3",
+		"prop-types": "^15.8.1",
 		"react": "^18.3.1",
 		"react-bootstrap": "^2.10.4",
 		"react-dom": "^18.3.1",
 		"react-scripts": "5.0.1",
-		"web-vitals": "^2.1.4",
-		"workbox-background-sync": "^6.6.0",
-		"workbox-broadcast-update": "^6.6.0",
-		"workbox-cacheable-response": "^6.6.0",
-		"workbox-core": "^6.6.0",
-		"workbox-expiration": "^6.6.0",
-		"workbox-google-analytics": "^6.6.1",
-		"workbox-navigation-preload": "^6.6.0",
-		"workbox-precaching": "^6.6.0",
-		"workbox-range-requests": "^6.6.0",
-		"workbox-routing": "^6.6.0",
-		"workbox-strategies": "^6.6.0",
-		"workbox-streams": "^6.6.0"
+		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
 		"start": "react-scripts start",
@@ -56,7 +45,9 @@
 	"devDependencies": {
 		"@babel/plugin-proposal-private-property-in-object": "^7.21.11",
 		"gh-pages": "^6.1.1",
+		"html-webpack-plugin": "^5.6.0",
 		"jest-cucumber": "^4.5.0",
+		"puppeteer": "^18.1.0",
 		"sass": "^1.79.3"
 	}
 }
