--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 		"react-bootstrap": "^2.10.4",
 		"react-dom": "^18.3.1",
 		"react-scripts": "5.0.1",
-		"recharts": "^2.12.7",
+		"recharts": "^2.13.0-alpha.5",
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
